more small edits

--- a/CliffordAlgebras/CliffordAlgebras.tex
+++ b/CliffordAlgebras/CliffordAlgebras.tex
@@ -57,7 +57,7 @@ An important group in mathematics is the \textbf{orthogonal group}, which descri
 $$\langle v,w \rangle  = \sum_i v^iw^i $$
 The inner product induces a norm, where $|v| = \langle v,v \rangle$, which introduces a notion of length in $\R^n$. In addition, we now have a notion of the angle between two vectors, where given two vectors $v,w \in \R^n$, we can define the angle $\theta$ between them to be
 $$\theta = \arccos\left( \frac{|\langle v,w \rangle|}{|v| |w|} \right) $$
-Then since the orthogonal group $O_n$ preserves the inner product, it also preserves this sense of angle and length. Using the induced norm, this makes $\R^n$ a metric spaces, where the distance function $d : \R^n \times \R^n \to \R$ is given by $d(v,w) = |v - w|$. Then the orthogonal group is the group of isometries of this metric space. This group plays a large role in physics, since many of the linear transformations we want to observe in the natural world preserve our perceptions of angle and length. For intuition, try thinking about what kind of shape these groups would have. In one dimension, we don't have too much to work with, since any linear map preserving the absolute value must be multiplication by $\pm 1$. Therefore, we find that $O_1 = \{1, -1\}$. In two dimensions, we have that things get a little more interesting. We note that if an orthogonal transformation $A \in O_2$ preserve length and angle, then it must necessarily preserve the unit circle $S^1 \subset \R^2$. We then see that any such transformation is (almost) uniquely determined by the angle in which it rotates a single vector, as well as whether it flips the orientation of $\R^2$. By orientation, we can say in a heuristic sense that it is a choice of clockwise or counterclockwise. A rotation by some angle $\theta$ preserves orientation, but a reflection, say across the $y$-axis, flips the orientation. From our description, we now see that $O_2$ should look like two disjoint circles, one circle for all the rotations, and another separate circle of rotations following a reflection. We call the orientation preserving component $SO_2$, which you can think of as the group of rotations. These two components are the orientation preserving and orientation reversing components. An important thing to observe here is that these components themselves form a group, which is denoted $\pi_0(O_2)$. This is seen by observing that the composition of two orientation reversing transformations preserves orientation, which matches our intuition that an even number of reflections preserves orientation. Therefore, we have that $\pi_0(O_2) \cong \Z / 2\Z$. Going back a bit, why did I say that the transformation is \emph{almost} uniquely determined by the angle? The reason is that a rotation by angle $\theta$ is the same as a rotation by an angle $2\pi - \theta$, so $SO_2$ might not be parameterized by a circle as we might have thought! In this low dimensional case, it happens that it is still isomorphic to a circle (why?), but this will not generalize to higher dimensions. In fact, this exact observation gives us that $SO_3$ is not $S^2$ as you might expect, but $\mathbb{RP}^3$! It's a good mental exercise to figure out what happens here, and why it differs from what happens with $O_2$. To see this, you might want the think of $\mathbb{RP}^3$ as the unit sphere $S^3 \subset \R^4$ where we identify antipodal points $x \sim -x$. Can you see why this is the right picture? If not, don't worry, after some work we will have a more rigorous explanation.
+Then since the orthogonal group $O_n$ preserves the inner product, it also preserves this sense of angle and length. Using the induced norm, this makes $\R^n$ a metric spaces, where the distance function $d : \R^n \times \R^n \to \R$ is given by $d(v,w) = |v - w|$. Then the orthogonal group is the group of linear isometries of this metric space. This group plays a large role in physics, since many of the linear transformations we want to observe in the natural world preserve our perceptions of angle and length. For intuition, try thinking about what kind of shape these groups would have. In one dimension, we don't have too much to work with, since any linear map preserving the absolute value must be multiplication by $\pm 1$. Therefore, we find that $O_1 = \{1, -1\}$. In two dimensions, we have that things get a little more interesting. We note that if an orthogonal transformation $A \in O_2$ preserve length and angle, then it must necessarily preserve the unit circle $S^1 \subset \R^2$. We then see that any such transformation is (almost) uniquely determined by the angle in which it rotates a single vector, as well as whether it flips the orientation of $\R^2$. By orientation, we can say in a heuristic sense that it is a choice of clockwise or counterclockwise. A rotation by some angle $\theta$ preserves orientation, but a reflection, say across the $y$-axis, flips the orientation. From our description, we now see that $O_2$ should look like two disjoint circles, one circle for all the rotations, and another separate circle of rotations following a reflection. We call the orientation preserving component $SO_2$, which you can think of as the group of rotations. These two components are the orientation preserving and orientation reversing components. An important thing to observe here is that these components themselves form a group, which is denoted $\pi_0(O_2)$. This is seen by observing that the composition of two orientation reversing transformations preserves orientation, which matches our intuition that an even number of reflections preserves orientation. Therefore, we have that $\pi_0(O_2) \cong \Z / 2\Z$. Going back a bit, why did I say that the transformation is \emph{almost} uniquely determined by the angle? The reason is that a rotation by angle $\theta$ is the same as a rotation by an angle $2\pi - \theta$, so $SO_2$ might not be parameterized by a circle as we might have thought! In this low dimensional case, it happens that it is still isomorphic to a circle (why?), but this will not generalize to higher dimensions. In fact, this exact observation gives us that $SO_3$ is not $S^2$ as you might expect, but $\mathbb{RP}^3$! It's a good mental exercise to figure out what happens here, and why it differs from what happens with $O_2$. To see this, you might want the think of $\mathbb{RP}^3$ as the unit sphere $S^3 \subset \R^4$ where we identify antipodal points $x \sim -x$. Can you see why this is the right picture? If not, don't worry, after some work we will have a more rigorous explanation.
 
 So tinkering around with the orthogonal group in low dimensions already gave us two key observations:
 \begin{enumerate}
@@ -121,7 +121,7 @@ using the relation that $e_i^2 = -1$.
 \end{proof}
 An additional observation is that $\mathrm{Cliff}(n)$ comes with an \emph{involution}, a linear map $T : \mathrm{Cliff}(n) \to \mathrm{Cliff}(n)$ such that $T^2 - \id$. This map is uniquely determined by reversing the order of products of basis vectors, i.e. $T(e_1e_2) = e_2e_1$, and extending linearly to the rest of $\mathrm{Cliff}(n)$. For an arbitrary $g \in \mathrm{Cliff(n)}$, we denote $T(g) = g^T$. The similarity to the notation from matrix transposition is not a coincidence!
 
-We're quickly approaching the punchline, but we need to extract one more thing out of the Clifford algebra. We can take the invertible elements of $\mathrm{Cliff}(n)$ to form the multiplicative group $\mathrm{Cliff}(n)^\times$, and then take the subgroup $G \subset \mathrm{Cliff}(n)$ generated by the unit vectors. Identifying $\R^n$ as a subspace of $\mathrm{Cliff}(n)$, this gives a (somewhat) natural action of $G$ on $\R^n$, where for $g \in G$ and $w \in \R^n$ we let 
+We're quickly approaching the punchline, but we need to extract one more thing out of the Clifford algebra. We can take the invertible elements of $\mathrm{Cliff}(n)$ to form the multiplicative group $\mathrm{Cliff}(n)^\times$, and then take the subgroup $G \subset \mathrm{Cliff}(n)^\times$ generated by the unit vectors. Identifying $\R^n$ as a subspace of $\mathrm{Cliff}(n)$, this gives a (somewhat) natural action of $G$ on $\R^n$, where for $g \in G$ and $w \in \R^n$ we let 
 $$g\cdot w = gwg^T $$
 though we still need to check that this is indeed a group action. In fact, we have no reason to believe as of yet that $gwg^T$ even needs to lie in $\R^n$, e.g. why can't $gwg^T = e_1e_2 \notin \R^n$ for some $g$ and $w$? To verify that this indeed defines an action, it suffices to check on the generating set of unit vectors. Let $v \in \R^n$ with $|v| = 1$ we note that since the product is length $1$, we have that $v^T = v$. Then using the relation we derived earlier, we compute
 \begin{align*}
@@ -131,12 +131,12 @@ vwv &= (-2 \langle v,w \rangle - wv)v \\
 \end{align*}
 Which is exactly \emph{hyperplane reflection} about the hyperplane perpendicular to $v$! This not only gives us that we have a group action on our hands, but it also tells us that the generating set acts exactly as the generating set for $O_n$, so we have a group homomorphism $\varphi : G \to O_n$, and by the Cartan-Dieudonn\'e theorem, this is surjective. Some work can show that the kernel of this map is $\pm 1$, which both act by identity, so this map is $2$ to $1$. In fact, we can see that $(-v)w(-v) = vwv$, which is exactly the fact that hyperplane reflection about $v^\perp$ and $-v^\perp$ are exactly the same. However, in our larger group $G$, we are able to distinguish between $v$ and $-v$. In addition, we have that any $g \in G$ that is a product of an even number of unit vectors, the the map determined by $g$ will be orientation preserving, since it will be an even number of hyperplane reflections. What did we just discover? We discovered the group $G = \mathrm{Pin}(n)$, and the subgroup generated by even products is $\mathrm{Spin}(n)$, which are the double covers of $O_n$ and $SO_n$ respectively. Thus in one fell swoop, we've addressed two of our earlier observations with the orthogonal group and encoded it in a new mathematical object -- the Clifford algebra. Because of this very geometric interpretation of how multiplication behaves, some call the Clifford algebra Clifford's geometric algebra, as multiplication in $\mathrm{Cliff}(n)$ seems to encode the geometry of $\R^n$.
 
-It's a useful exercise to explore exactly what these Clifford algebras are in terms we are already familiar with. For example, $\mathrm{Cliff}(1) = \C$, and $\mathrm{2} = \mathbb{H}$, where $\mathbb{H}$ is the quaternions. If you're familiar with computer graphics, you might recall the rotations are often more compactly represented as quaternions, where the action of a quaternion $q \in \mathbb{H}$ on $\R^3$ is given by $v \mapsto qv\bar{q}$, where $\bar{q}$ is the conjugate of $q$. The fact that this formula looks just like what we derived should come as no surprise, we've just described the same thing! This gives us that $\mathrm{Spin}(3)$ is just the unit quaternions (since they are closed under multiplication), which is diffeomorphic to the $3$ sphere $S^3$. Then the $2$ to $1$ map onto $SO_3$ is just the quotient by antipodal points, giving us that $SO_3 \cong \mathbb{RP}^3$.
+It's a useful exercise to explore exactly what these Clifford algebras are in terms we are already familiar with. For example, $\mathrm{Cliff}(1) = \C$, and $\mathrm{Cliff}(2) = \mathbb{H}$, where $\mathbb{H}$ is the quaternions. If you're familiar with computer graphics, you might recall the rotations are often more compactly represented as quaternions, where the action of a quaternion $q \in \mathbb{H}$ on $\R^3$ is given by $v \mapsto qv\bar{q}$, where $\bar{q}$ is the conjugate of $q$. The fact that this formula looks just like what we derived should come as no surprise, we've just described the same thing! This gives us that $\mathrm{Spin}(3)$ is just the unit quaternions (since they are closed under multiplication), which is diffeomorphic to the $3$ sphere $S^3$. Then the $2$ to $1$ map onto $SO_3$ is just the quotient by antipodal points, giving us that $SO_3 \cong \mathbb{RP}^3$.
 
-Along with the geometric insights, there's a very beautiful theory about the algebras themselves, without having to look at $\mathrm{Pin}$ and $\mathrm{Spin}$. If we replace the inner product $\langle \cdot,\cdot \rangle$ with an arbitrary symmetric bilinear form $b : \R^ \times \R^n \to \R$ we can repeat the same construction to give $\mathrm{Cliff}(\R^n ,b)$. It's a theorem that a nondegenerate symmetic bilinear form is uniquely determined by its signature -- the number of $1$'s and $-1$'s on the diagonal of its matrix after diagonalizing, so we get an infinite family of algebras $\mathrm{Cliff}(p,q)$, where $p$ denoes the number of $1$'s and $q$ the number of $-1$'s. The wonderful thing here is that these algebras behave very nicely under tensor product, as in the tensor product of two Clifford algebras produces another Clifford algebra. Indeed, after some work, it turns out that after we know $\mathrm{Cliff}(0,n)$ and $\mathrm{Cliff}(n,0)$ for $0 \leq n \leq 8$, we have the necessary information to identify \emph{all} Clifford algebras, in something called \textbf{Bott periodicity}. With that, I leave you with the abstract definition of a Clifford algebra, which is the usual context in which one first sees it. Can you see why this abstract definition corresponds to our own?
+Along with the geometric insights, there's a very beautiful theory about the algebras themselves, without having to look at $\mathrm{Pin}$ and $\mathrm{Spin}$. If we replace the inner product $\langle \cdot,\cdot \rangle$ with an arbitrary symmetric bilinear form $b : \R^n \times \R^n \to \R$ we can repeat the same construction to give $\mathrm{Cliff}(\R^n ,b)$. It's a theorem that a nondegenerate symmetic bilinear form is uniquely determined by its signature -- the number of $1$'s and $-1$'s on the diagonal of its matrix after diagonalizing, so we get an infinite family of algebras $\mathrm{Cliff}(p,q)$, where $p$ denoes the number of $1$'s and $q$ the number of $-1$'s. The wonderful thing here is that these algebras behave very nicely under tensor product, as in the tensor product of two Clifford algebras produces another Clifford algebra. Indeed, after some work, it turns out that after we know $\mathrm{Cliff}(0,n)$ and $\mathrm{Cliff}(n,0)$ for $0 \leq n \leq 8$, we have the necessary information to identify \emph{all} Clifford algebras, in something called \textbf{Bott periodicity}. With that, I leave you with the abstract definition of a Clifford algebra, which is the usual context in which one first sees it. Can you see why this abstract definition corresponds to our own?
 \begin{definition}
 Given a vector space $V$ and a symmetric bilinear form $b : V \times V \to \R$, the \textbf{Clifford algebra} is the data of a unital associative algebra $\mathrm{Cliff}(V,b)$ along with a linear map $\iota : V \to \mathrm{Cliff}(V,b)$ such that for an linear map $\varphi : V \to A$ of $V$ into another unital associative algebra $A$ satisfying 
-$$\varphi(v) = b(v,v) $$
+$$\varphi(v)^2 = b(v,v) $$
 then this factors through $\mathrm{Cliff}(V,b)$ to give a unique map $\tilde{\varphi} : \mathrm{Cliff}(V,b) \to A$ such that 
 $$\begin{tikzcd} 
 V \ar[d, "\iota"'] \ar[dr, "\varphi"] \\
