--- a/CliffordAlgebras/CliffordAlgebras.tex
+++ b/CliffordAlgebras/CliffordAlgebras.tex
@@ -135,7 +135,7 @@ It's a useful exercise to explore exactly what these Clifford algebras are in te
 
 Along with the geometric insights, there's a very beautiful theory about the algebras themselves, without having to look at $\mathrm{Pin}$ and $\mathrm{Spin}$. If we replace the inner product $\langle \cdot,\cdot \rangle$ with an arbitrary symmetric bilinear form $b : \R^n \times \R^n \to \R$ we can repeat the same construction to give $\mathrm{Cliff}(\R^n ,b)$. It's a theorem that a nondegenerate symmetic bilinear form is uniquely determined by its signature -- the number of $1$'s and $-1$'s on the diagonal of its matrix after diagonalizing, so we get an infinite family of algebras $\mathrm{Cliff}(p,q)$, where $p$ denoes the number of $1$'s and $q$ the number of $-1$'s. The wonderful thing here is that these algebras behave very nicely under tensor product, as in the tensor product of two Clifford algebras produces another Clifford algebra. Indeed, after some work, it turns out that after we know $\mathrm{Cliff}(0,n)$ and $\mathrm{Cliff}(n,0)$ for $0 \leq n \leq 8$, we have the necessary information to identify \emph{all} Clifford algebras, in something called \textbf{Bott periodicity}. With that, I leave you with the abstract definition of a Clifford algebra, which is the usual context in which one first sees it. Can you see why this abstract definition corresponds to our own?
 \begin{definition}
-Given a vector space $V$ and a symmetric bilinear form $b : V \times V \to \R$, the \textbf{Clifford algebra} is the data of a unital associative algebra $\mathrm{Cliff}(V,b)$ along with a linear map $\iota : V \to \mathrm{Cliff}(V,b)$ such that for an linear map $\varphi : V \to A$ of $V$ into another unital associative algebra $A$ satisfying 
+Given a vector space $V$ and a symmetric bilinear form $b : V \times V \to \R$, the \textbf{Clifford algebra} is the data of a unital associative algebra $\mathrm{Cliff}(V,b)$ along with a linear map $\iota : V \to \mathrm{Cliff}(V,b)$ such that for any linear map $\varphi : V \to A$ of $V$ into another unital associative algebra $A$ satisfying 
 $$\varphi(v)^2 = b(v,v) $$
 then this factors through $\mathrm{Cliff}(V,b)$ to give a unique map $\tilde{\varphi} : \mathrm{Cliff}(V,b) \to A$ such that 
 $$\begin{tikzcd} 
